tests/NormalTests/paczka1/fuzzy1/61472588.err
Error in line 5: 1Y4ya4 S404 93,4
Error in line 29: S404 S404 56,59
Error in line 30: S404 S404 125,2
